--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,18 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link rel="stylesheet" href="/styles/colors.css" />
+		<link rel="stylesheet" href="/styles/elements.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Staatliches&family=VT323&display=swap"
+			rel="stylesheet"
+		/>
 		%svelte.head%
 	</head>
 	<body>
-		<div>%svelte.body%</div>
+		%svelte.body%
 	</body>
 </html>
