--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<link rel="stylesheet" href="/styles/colors.css" />
-		<link rel="stylesheet" href="/styles/elements.css" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,9 +11,9 @@
 			href="https://fonts.googleapis.com/css2?family=Staatliches&family=VT323&display=swap"
 			rel="stylesheet"
 		/>
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		%svelte.body%
+		%sveltekit.body%
 	</body>
 </html>
