update with format

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/png" href="https://houdinigraphql.com/images/logo.png" />
+		<title>Houdini • SvelteKit • Pokédex</title>
 		<link rel="stylesheet" href="/styles/colors.css" />
 		<link rel="stylesheet" href="/styles/elements.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
